<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">regdemo</string>
    <string name="action_settings">Settings</string>
    <string name="title">Member Registration Demo</string>
    <string name="haririfomu">Chagua Fomu Uhariri</string>
     <string name="fomulist">Tuma Fomu</string>
      <string name="sajirifomu">Taarifa Za Mwanachama</string>
      <string name="taarifa_binafsi">Taarifa Binafsi</string>
      <string name="taarifa_famili">Taarifa Za Familia</string>
       <string name="taarifa_biashara">Taarifa Za Biashara</string>
        <string name="taarifa_picha">Picha Ya Mteja</string>
         <string name="taarifa_mdhamini">Taarifa Za Mdhamini</string>
     <string name="jina">Jina</string>
     <string name="jinsia">Jinsia</string>
     <string name="kuzaliwa">Tarehe Ya Kuzaliwa</string>
     <string name="kuolewa">Umeoa/Kuolewa</string>
     <string name="mume">Jina La Mume/Mke</string>
      <string name="mtotongapi">Unawatoto ngapi</string>
      <string name="mtotojina">Jina La Mtoto</string>
       <string name="mmejina">Jina La Mume/Mke</string>
       <string name="ainakitambulisho">Aina Ya Kitambulisho</string>
       <string name="nambakitambulisho">Namba Ya Kitambulisho</string>
       <string name="jinamdhamini">Jina La Mdhamini</string>
       <string name="simumdhamini">Simu Ya Mdhamini</string>
         <string name="splash">Subiri Ninajiandaa</string>
       <string name="jinsiamke">Mwanamke</string>
       <string name="jinsiamme">Mwanaume</string>
       <string name="mtumiaji">Jina La Mtumiaji</string>
       <string name="ingia">Ingia</string>
       <string name="gairi">Ghairi</string>
     <string name="mkoa">Mkoa</string>
     <string name="wilaya">Wilaya</string>
     <string name="kata">Kata</string>
     <string name="simu">Simu</string>
     <string name="kikundi">Kikundi</string>
     <string name="login">Karibu regDemo</string>
     <string name="biashara">Biashara</string>
    <string name="banki">Jina La Banki/Taasisi</string>
     <string name="mkopokiasi">Kiwango Cha Maombi</string>
     <string name="kiwangokuanzia">Kiwango Cha Kuanzia</string>
     <string name="malipokwasiku">Malipo Kwa Siku</string>
      <string name="tarehemkopo">Tarehe Mkopo</string>
      <string name="mudamalipo">Muda Wa Malipo</string>
      <string name="ombihuduma">Maombi Ya Huduma</string>
      <string name="hakunafomu">Hakuna Fomu! Fanya Usajiri Kwanza</string>
     <string name="picha">Picha</string>
     <string name="bonyeza">Piga Picha</string>
     <string name="hatua">Hatua Ya</string>
      <string name="inayofuata">Inayofuata</string>
      <string name="progress">Subiri</string>
     <string name="nenosiri">Neno La Siri</string>
     <string name="tumataarifa">Tuma Taarifa</string>
     <string name="sajiri">Usajiri Mpya</string>
     <string name="tuma">Tuma Fomu</string>
     <string name="hariri">Hariri Fomu</string>
     <string name="futa">Futa Fomu</string>
     <string name="tumafomu">Tuma Fomu</string>
     <string name="maelezo">Karibu hii programu itakuwezesha kusajiri,kuhariri,kutuma
         na kuhifadhi taarifa za mikopo. Kuanza bonyeza kitufe hapo chini</string>
     <string name="tafuta">Wanachama</string>
     <string name="toamkopo">Toa Mkopo</string>
     <string name="pokeaingizo">Pokea Rejesho</string>
      <string name="apiURL">http://lab.comasi.com/regdemo/api/index.php</string>
    <string name="songURL">http://192.168.43.31/songs/</string>
   <string name="pictureURL">http://192.168.43.31/picture/</string>
   
</resources>
