<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp" />
        
            

        <EditText
            android:id="@+id/jina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:ems="10"
            android:hint="@string/jina" >

            <requestFocus />
        </EditText>

            <RadioGroup
            android:id="@+id/jinsia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jina"
             >

            <RadioButton
                android:id="@+id/mke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/jinsiamke" />

            <RadioButton
                android:id="@+id/mume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jinsiamme" />
        </RadioGroup> 

        <EditText
            android:id="@+id/tarehekuzaliwa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/jinsia"
            android:ems="10"
            android:hint="@string/kuzaliwa"
           
            android:inputType="date" />
       
           <Spinner
        android:id="@+id/mkoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tarehekuzaliwa"
       />
         <Spinner
        android:id="@+id/wilaya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mkoa"
       />
        
         <Spinner
        android:id="@+id/kata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wilaya"
       />

        <EditText
            android:id="@+id/simu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/kata"
            android:ems="10"
            android:hint="@string/simu"
            android:inputType="phone" />

        

        <EditText
            android:id="@+id/nambakitambulisho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/simu"
            android:ems="10"
            android:hint="@string/nambakitambulisho" />

        <EditText
            android:id="@+id/ainakitambulisho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nambakitambulisho"
            android:ems="10"
            android:hint="@string/ainakitambulisho" />
    
        <ProgressBar
            android:id="@+id/inaload"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/inayofuata"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/inayofuata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ainakitambulisho"
            android:layout_centerHorizontal="true"
            android:onClick="sendData"
            android:text="@string/inayofuata" />

       
    </RelativeLayout>

</ScrollView>