<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scrollView1"
android:layout_width="fill_parent" android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/jinamdhamini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/jinamdhamini" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/simumdhamini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/jinamdhamini"
        android:layout_below="@+id/jinamdhamini"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/simumdhamini"
        android:inputType="phone" />



  
     <Button
       android:id="@+id/pichamdhamini"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/simumdhamini"
       android:layout_marginTop="14dp"
       android:onClick="pichaMdhamini"
       android:text="@string/picha" />


  
   <Button
        android:id="@+id/tumadata"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pichamdhamini"
        android:layout_marginTop="24dp"
        android:text="@string/tumataarifa" />


   <ImageView
       android:id="@+id/mdhaminiview"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/tumadata"
       android:layout_toRightOf="@+id/tumadata"
       android:src="@drawable/ic_launcher" />

</RelativeLayout>
</ScrollView>
