<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_text_bg"
    android:orientation="vertical" >

<!-- Title bar -->

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_text_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/return_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:background="@drawable/icon"
            android:height="48dp"
            android:paddingTop="2dp"
            android:width="48dp" />

        <TextView
            android:id="@+id/pagetitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:paddingLeft="6dp"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#1BB4E7"
            android:textSize="16sp"
            android:textStyle="normal"
            android:typeface="sans" />
    </LinearLayout>

    <!-- End of title bar -->

  <TextView
      android:id="@+id/textView1"
      style="@style/text_black"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="15dp"
      android:text="@string/title"
      android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/mdha_uri"
        style="@style/text_black_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_horizontal"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        android:text="@string/maelezo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/button1"
            style="@style/button_text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_add"
            android:onClick="sajiri"
            android:text="@string/sajiri" />

        <Button
            android:id="@+id/button2"
            style="@style/button_text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_edit"
            android:onClick="hariri"
            android:text="@string/hariri" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/button3"
            style="@style/button_text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0px"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_send"
            android:onClick="tuma"
            android:text="@string/tuma" />

        <Button
            android:id="@+id/button4"
            style="@style/button_text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="26dp"
            android:onClick="wanachama"
            android:text="@string/tafuta" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/button5"
            style="@style/button_text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="42dp"
            android:onClick="toaMkopo"
            android:text="@string/toamkopo" />

        <Button
            android:id="@+id/button6"
            style="@style/button_text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:onClick="pokeaRejesho"
            android:text="@string/pokeaingizo" />

    </LinearLayout>

</LinearLayout>
