<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="top"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_text_bg"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="5dp" >
<Button
            android:id="@+id/return_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:background="@drawable/icon"
            android:height="48dp"
            android:paddingTop="2dp"
            android:width="48dp" />
        <TextView
            android:id="@+id/textView1"
            style="@style/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FF000000" />

        <EditText
            android:id="@+id/mtumiaji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mtumiaji" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/nenosiri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nenosiri"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|center" >

            <Button
                android:id="@+id/ingia"
                style="@style/button_text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical|center_horizontal|center"
                android:onClick="ingia"
                android:text="@string/ingia" />

            <Button
                android:id="@+id/ghairi"
                style="@style/button_text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ghairi"
                android:text="@string/gairi" />

        </LinearLayout>

    </LinearLayout>
    


