<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trendsong_view_bg"
    android:orientation="vertical" >
 <!-- Title bar -->

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      
        android:background="@drawable/login_text_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/return_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:background="@drawable/icon"
            android:height="48dp"
            android:paddingTop="2dp"
            android:width="48dp" />

        <TextView
            android:id="@+id/pagetitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:paddingLeft="6dp"
            android:text="@string/tumafomu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#1BB4E7"
            android:textSize="16sp"
            android:textStyle="normal"
            android:typeface="sans" />

      <!--  <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
       
            android:height="48dp"
            android:width="60dp" /> --> 
    </LinearLayout>
    <!-- End of title bar -->
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dip"
        android:choiceMode="multipleChoice" 
        android:cacheColorHint="#00000000"
        >
       
    </ListView>
      <TextView
     android:id="@+id/hamnafomu"
    style="@style/text_black_normal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:text="@string/hakunafomu"
    android:fadingEdge="none" >

</TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_text_bg"
        android:focusable="true"
        android:gravity="bottom|center_horizontal"
        android:paddingTop="4dp" >

        <Button
            android:id="@+id/tuma_fomu"
            style="@style/button_text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_send"
            android:onClick="tumaFomu"
            android:text="@string/tuma" />

        <Button
            android:id="@+id/futa_fomu"
            style="@style/button_text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_delete"
            android:onClick="futaFomu"
            android:text="@string/futa" />

    </LinearLayout>

</LinearLayout>
